feat: include host rewrite for github

--- a/private_dot_gitconfig.tmpl
+++ b/private_dot_gitconfig.tmpl
@@ -13,3 +13,5 @@
 	process = git-lfs filter-process
 [url "git@cd.splunkdev.com:"]
 	insteadOf = https://cd.splunkdev.com/
+[url "git@github.com:"]
+	insteadOf = https://github.com/
